[docs] TODO 정리 — 끝난 항목 종료, 번호·그룹·참조 정돈
TODO 는 남은 일을 적는 곳인데 끝난 것이 남아 있고 번호가 흐트러져 있었다. 40개 → 36개.

종료한 것:

- 5.3 팬아웃 처리량 개선 — 배칭(#265)으로 해소. 남은 방별 순번만 5.3-b 로 올렸다.
  검토했으나 안 고른 안(가상 스레드 pinning · 인스턴스 확장)은 ADR-003 으로 옮겼다
- 5.15 측정 유효성 기준 — 할 일이 아니라 정착된 기준이다. swapin 임계 표를 k6 README 로
- 5.10 outbound 상한 원인 — 가설이 지지되지 않았고 현상 자체가 재현되지 않는다. 배제 근거와
  스레드 실험의 교훈은 측정 문서 §4 로, 재판정은 5.12 로 승계
- 5.4-b ParallelGC 잔여 적용(완료) · 5.4-a outbox 행 청소 · 5.4 못 잰 것 · 5.2 배치 웜업 검토
- 5.9 wrapper — 완료 서술뿐이고 없는 절(§6)을 가리켰다. 남은 5.9-c · 5.9-d 를 항목으로 올렸다

정정한 것:

- 5.14 를 경로별 표로 다시 썼다. 검증 실패·rate limit·gRPC 실패·ACK 는 전부 통보되고 남은
  것은 inbound 큐 거절 하나다. 제목도 그렇게 바꿨다
- 닫힌 항목을 가리키던 참조 둘(5.9-c 의 5.9-a, 5.9-d 의 5.7)
- 번호 중복(4.7 둘) 과 잘못된 그룹(4.11 은 기능인데 CI/CD 에, 4.7 은 공통인데 outbox-poller 에)
- CI/CD · websocket-gateway 그룹 내부를 번호 오름차순으로

새로 연 것은 4.15(squash 머지 본문이 훅이 넘긴 값과 다름) 하나다.

저장소 전체에서 TODO 번호 참조를 훑어 끊긴 것이 없음을 확인했다.

Co-authored-by: Claude <noreply@anthropic.com>